syntax = "proto3";

package Need4Protocol;
import "protos/Action.proto";
import "google/protobuf/empty.proto";

service ItemRepository {
	rpc AddNewItem (Item) returns (ActionResponse);
	rpc GetAllItems (google.protobuf.Empty) returns (ItemList);
	rpc GetMatchingItems (Item) returns (ItemList);
}

message ItemList {
	int32 id = 1;
	repeated Item items = 2;
}

message Item {
	int32 id = 1;
	string name = 2;
	double estimatedCost = 3;
	double quantity = 4;
	string measurement = 5;
	string description = 6;
}

